@@ -3,6 +3,7 @@
 - Added F clef render on printed scores
 - Added dotted silence rendering
 - Printing : fixed vertical measure dividers to play nicely with scores
+- Fixed crash when printing a single track
 
 1.2b5
 - More minor linux fixes
